# vyper-ape-hello-world

./: README.md  ape-config.yaml  pyproject.toml
.github/workflows/: test.yml
contracts/: HelloWorld.vy
helloworld/: __init__.py
tests/: test_hello_world.py
