[tool.poetry]
name = "vyper-ape-hello-world"
version = "0.1.0"
description = "Hello World example for Vyper smart contracts"
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "usdc_payment_forwarder"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
eth-ape = "^0.6.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
